--- a/styles/style.css
+++ b/styles/style.css
@@ -1511,7 +1511,9 @@ footer section {
 }
 
 .contact-form {
-  margin-top: 0;
+  padding-top: 4em;
+  height: 100vh;
+  padding-bottom: 4em;
   background: url("../img/brent-cox-mid.jpg");
   background-color: rgba(40, 78, 104, 0.5);
   background-size: cover;
